--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">The Rifle</a></li>
-								<li><a href="#about">The Company</a></li>
-								<li><a href="#contact">Inquiry / Order</a></li>
+								<li><a href="#intro">O pušce</a></li>
+								<li><a href="#about">Technický popis</a></li>
+								<li><a href="#contact">Kde / jak objednat</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -43,39 +43,44 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">O pušce</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Perun 15 je samonabíjecí puška konstrukce AR15, z které si přináší zaměnitelnost všech klíčových dílů a doplňků. Jde o pušku, která představuje vynikající základ pro jakékoliv následné přizpůsobení od využití pro sportovní střelbu až po různé druhy taktické střelby v rámci kurzů.</p>
+								<p>Klíčovými vlastnostmi pušky jsou:</p>
+								<ul>
+									<li>Za studena kovaná hlaveň ošetřená nitridací</li>
+									<li>Záměnnost dílů - snadné přizpůsobení si pušky střelcem</li>
+									<li>Vynikající poměr cena/výkon</li>
+								</ul>
 							</article>
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
+								<h2 class="major">Technický popis</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Upper i lower receiver jsou z kovaného duralu, hlaveň z oceli 15142. Samonabíjecí systém pracuje na principu přímého působení plynů odebíraných z hlavně. Plynový násadec (gasblock) vlastní konstrukce a české výroby zajišťuje vysokou efektivitu přenosu plynů do systému a tím vyžaduje méně plynu. Plastové pažbení DLG zvyšuje uživatelský komfort. Pažbička obsahuje úložný prostor, pažba je nasazena na trubce standardu mil-spec. Ústí hlavně je osazeno klasickým tlumičem plamene „bird-cage“. Závit na ústí je ½-28 UNEF.</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Inquiry / Order</h2>
+								<h2 class="major">Kde / jak objednat</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
-											<label for="name">Name</label>
+											<label for="name">Jméno</label>
 											<input type="text" name="name" id="name" />
 										</div>
 										<div class="field half">
-											<label for="email">Email</label>
+											<label for="email">E-mail</label>
 											<input type="text" name="email" id="email" />
 										</div>
 										<div class="field">
-											<label for="message">Message</label>
+											<label for="message">Zpráva</label>
 											<textarea name="message" id="message" rows="4"></textarea>
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="submit" value="Odeslat" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
