--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Perun 15</h1>
-								<p>Proven American design, 100% Czech quality</p>
+								<p>Americký model, česká kvalita</p>
 							</div>
 						</div>
 						<nav>
